# Supply-Chain-Optimization

./: .gitignore  README.md  package-lock.json  rl_offline_dqn_optimized.pth  schema.py
docs/: integration.md
frontend/: index.html  package-lock.json  package.json
hf-space/: env.py  pyproject.toml  (+1 more)
supply_chain_management/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  analysis_prompts.py  app.py  database.py  debug_hard.py  env.py  grader.py  inference.py  ml_service.py  news_service.py  openenv.yaml  pyproject.toml  requirements.txt  rl_agent_optimized.pt  rl_behavioral_clone.pth  rl_behavioral_clone_optimized_optimized.pt  rl_offline_dqn.pth  rl_offline_dqn_optimized.pth  schema.py  seed_data.py  self_improvement.py  supply_chain_saas.db  test_engine.py  train_rl.py  training_history.json  ui.py  weather_service.py
supply_chain_management/saas_backend/: API_CONTRACTS.md  __init__.py  app.py
supply_chain_management/saas_backend/core/: config.py
supply_chain_management/saas_backend/database/: bootstrap.py  models.py  session.py
supply_chain_management/saas_backend/rl_engine/: __init__.py  model.py
supply_chain_management/saas_backend/routes/: analytics.py  decision.py  inventory.py  orders.py  products.py  simulations.py  suppliers.py
supply_chain_management/saas_backend/schemas/: domain.py
supply_chain_management/saas_backend/services/: analytics_service.py  crud.py  recommendation_service.py  simulation_service.py
supply_chain_management/scratch/: test_apis.py
supply_chain_management/server/: api.py  app.py  services.py
(+53 files in other folders)
